X-Moto 0.5.6 2011-
--------------------------------
 * dark background behind the chat messages
 * add ctrl+p to prefill chat box with previous private recipients
 * possibility to send a report on the website when a level crashes
 * monospace font for the admin console (DejaVuSansMono.ttf)
 * fix some bugs (if you win and lost at exactly the same time, you lost)

X-Moto 0.5.5 2011-01-21
--------------------------------
 * replay support for physics levels
 * improve network mode performances
 * private message support on network interface
 * several keys are now customizable via the options
 * GetPlayerProfileName script function is now deprecated
 * some minor fixes

X-Moto 0.5.4 2010-11-30
--------------------------------
 * Add a button in the network tab to join levels played by other people
 * Remove the downloading ghost screen (background download)
 * Add a button to watch the replay just after death or finish
 * Add a configuration checkbox to be able to connect to the server at startup
 * Add 2 configuration control keys to change the chat history
 * Display time required for the next medal in game
 * Completion for chat box and server console
 * Change default chineese font name from wqy-zenhei.ttf to wqy-zenhei.ttc
 * fix played time counted 2 times when using checkpoints
 * minor bugs fixed

X-Moto 0.5.3 2010-04-30
--------------------------------
 * Ugly Mode heavily improved (Menu GFX and Scripted Sprites)
 * xdg-basedir implementation
 * bugfix: Compile with ode 0.11
 * bugfix: Rendering no more stalls on level restart
 * bugfix: Messages System (also for multiplayer)
 * bugfix: Multiplayer: Screen Shadow
 * bugfix: Multiplayer: Minimap
 * bugfix: Multiplayer: Time Panel & Game Status
 * bugfix: Multiplayer: Death Sound for all Players
 * bugfix: libode compatibility
 * bugfix: edge rendering order improved
 * bugfix: better Quickstart behaviour
 * graphics: Death Zones, Teleport Zones and Particles rendered in low level gfx modes