@@ -214,6 +214,12 @@ Don't check that system and user dirs changed at startup. It is mainly usefull i
 .B --server
 Run X-Moto as a server only (no gui).
 .TP
+.B --serverPort <port>
+Specify the server port (with --server only).
+.TP
+.B --serverAdminPassword <password>
+Specify a server admin password which is always valid (with --server only).
+.TP
 .B --connectAtStartup
 Connect the client to the server at startup.
 .TP
